fixing absolute font sizes in some elements (bad because they were not responsive)

--- a/public/assets/css/contents.css
+++ b/public/assets/css/contents.css
@@ -59,7 +59,7 @@
 
 .container-fluid.content-body{
     font-family: 'Raleway', sans-serif;
-    font-size: 140%;
+    font-size: 130%;
     text-align: justify;
     padding-top: 7vh;
     padding-bottom: 2vh;
@@ -68,7 +68,7 @@
 
 .container-fluid.content-contacts{
     font-family: 'Raleway', sans-serif;
-    font-size: 140%;
+    font-size: 130%;
     text-align: center;
     padding-top: 7vh;
     padding-bottom: 2vh;
@@ -77,7 +77,7 @@
 
 .container-fluid.content-footer{
     font-family: 'Raleway', sans-serif;
-    font-size: 140%;
+    font-size: 130%;
 
 }
 
@@ -101,7 +101,7 @@
     border-radius: 0;
     border: 0.5vh solid;
     font-family: 'Raleway', sans-serif;
-    font-size: 140%;
+    font-size: 130%;
     color: #29384F!important;
     width: 30vh;
 
